<resources>
    <string name="app_name">Weather App</string>
    <string name="hello_world">Hello World!</string>
    <string name="settings">Settings</string>
    <string name="city_zipcode">City ZipCode</string>
</resources>
