<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yan.weather.ui.activity.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/forecast_list"
        android:layout_width="match_parent"
        android:paddingTop="?attr/actionBarSize"
        android:clipToPadding="false"
        android:layout_height="match_parent"/>

    <include layout="@layout/toolbar"/>

</FrameLayout>
